tests/paczka2/big_fuzzy/55500013.err
Error in line 5: n04w A206 90,2
Error in line 12: 1Chq S971 23,4
Error in line 34: RXpA S971 17,0
Error in line 27: S268 S754 9,3
Error in line 31: oskuSC S971 8,8
Error in line 53: n04w S268 40,9
Error in line 55: oskuSC S268 20,0
Error in line 57: n04w S754 49,2
Error in line 58: oskuSC A206 81,5
Error in line 56: RXpA S971 61,3
Error in line 72: k0saEU S268 65,3
Error in line 77: S268 S754 30,5
Error in line 87: RXpA S971 64,6
Error in line 79: S268 S268 98,1
Error in line 112: k0saEU A206 13,14
Error in line 110: S268 S971 87,1
Error in line 116: oskuSC S754 67,8
Error in line 117: S268 S268 94,6
Error in line 118: oskuSC S268 53,1
Error in line 121: 1Chq A206 36,9
Error in line 130: RXpA S971 52,6
Error in line 129: 42txktay S268 67,5
Error in line 141: k0saEU A206 16,4
Error in line 145: 42txktay S754 46,x
Error in line 149: 1Chq S754 46,3
Error in line 153: 1Chq S268 1,5
Error in line 152: S268 S268 1,9
Error in line 164: S268 S971 93,6
Error in line 166: k0saEU S268 61,8
Error in line 170: k0saEU S971 50,1
Error in line 165: S268 A206 12,0
Error in line 179: RXpA S971 1,8
Error in line 187: RXpA S268 24,3
Error in line 189: RXpA S971 820,4
Error in line 171: n04w S268 75,0
Error in line 191: 42txktay A206 257,6
Error in line 202: S268 S268 35,2
Error in line 200: n04w S971 161,2
Error in line 212: oskuSC S754 61,28
Error in line 211: k0saEU S268 4,5
Error in line 214: k0saEU S754 27,3
Error in line 206: S268 A206 3,0
Error in line 204: oskuSC S754 51,1
Error in line 219: S268 S268 42,4
Error in line 230: 42txktay S268 44,8
Error in line 231: n04w S754 40,3
Error in line 241: n04w S971 73,6
Error in line 244: 1Chq A206 14,!
Error in line 233: k0saEU A206 47,2
